--- a/site/bs2tts.html
+++ b/site/bs2tts.html
@@ -6,29 +6,23 @@
     <link rel="icon" href="/favicon.ico">
 </head>
 <body>
-    <template id="unitDisplayTemplate">
-        <section class="unitDisplay" data-uuid="">
-            <h2 class="unitName"><input type="text" onFocus="this.select();" /></h2>
-            <div class="modelContainer"></div>
+    <template id="groupDisplayTemplate">
+        <section class="groupDisplay" data-uuid="">
+            <h2 class="groupName"><input type="text" onFocus="this.select();" /></h2>
+            <div class="gamePieceContainer"></div>
         </section>
     </template>
-    <template id="modelDisplayTemplate">
-        <section class="modelDisplay">
+    <template id="gamePieceDisplayTemplate">
+        <section class="gamePieceDisplay">
             <h3>
-                <span class="modelNum"></span><span>x </span><span class="modelName"></span>
             </h3>
-            <section class="weaponDisplay">
-                <h4>Weapons:</h4>
-                <ul></ul>
-            </section>
-            <section class="abilityDisplay">
-                <h4>Abilities:</h4>
-                <ul></ul>
-            </section>
-            <section class="unassignedDisplay">
-                <h4>Unassigned Weapons:</h4>
-                <ul></ul>
-            </section>
+        </section>
+    </template>
+    <template id="assetGroupDisplayTemplate">
+        <section class="assetDisplay">
+            <h3></h3>
+            <h4></h4>
+            <ul></ul>
         </section>
     </template>
     <template id="loadedCodeDisplayTemplate">
@@ -60,11 +54,7 @@
                     UI width:
                     <input type="number" value="1200" id="uiWidth" min="1" />
                 </label>
-                <label for="crusadeModule">
-                    Crusade scripting:
-                    <input type="checkbox" id="crusadeModule" checked />
-                </label>
-                <label for="decorativeNames">
+                <label for="decorativeNames" class="bsOption">
                     Unit name on all models in unit:
                     <input type="checkbox" id="decorativeNames" />
                 </label>
@@ -78,8 +68,10 @@
                 <span>Yellow Man's Battlescribe to TTS</span>
                 <img src="/img/tts_icon.png" />
             </header>
-            <header>This site must be used together with the&nbsp;<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2920625970">new mod!</a>&nbsp;Please note that only 40K is supported, not AoS or Kill Team.</header>
-            <header>In addition, we recommend using&nbsp;<a href="https://rosterizer.com">Rosterizer</a>&nbsp;not Battlescribe for 10th edition lists.</header>
+            <header>This site must be used together with the&nbsp;<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2920625970">new mod!</a></header>
+            <header>Yellowscribe now accepts rosters from <i>ANY</i> game that&nbsp;<a href="https://rosterizer/com">Rosterizer</a>&nbsp;supports.</header>
+            <p class="centered">(if there&rsquo;s a game you need support for, the&nbsp;<a href="https://discord.gg/sUzdvEXsZR">Rosterizer data team discord</a>&nbsp;can assist with rulebook authorship)</p>
+            <header>Battlescribe & New Recruit users: Yellowscribe only works with .rosz files for 40k 10e; NOT 9e, Kill Team, or AoS. <i>Due to some data limitations, we recommend using Rosterizer, <em>not Battlescribe</em>, for 10th edition 40k lists.</i></header>
             <section id="errorContainer"></section>
             <p class="centered flex">(Battlescribe-only) Behaviour for unit-scope upgrades: <select name="wargearAllocationMode" id="wargearAllocationMode"><option value="allModels" selected>Allocate to all models</option><option value="oneModel">Allocate all to one model</option><option value="separateModels">Allocate each to separate model</option></select></p>
             <input type="file" name="rosterUpload" id="rosterUpload" />
